# sydney-airbnb-price-intelligence

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
config/: config.yaml
data/processed/: listings_features_2026-06-16.parquet
docs/: data_dictionary.md  model_card.md
models/: price_tier_model.joblib
report/: sydney_airbnb_price_intelligence.Rmd  sydney_airbnb_price_intelligence.html
reports/: feature_importance.json  metrics.json
research/: 01_exploratory_analysis.Rmd  02_final_modeling_report.Rmd  README.md
src/airbnb_pricer/: __init__.py  cli.py  config.py
src/airbnb_pricer/data/: clean.py  download.py
src/airbnb_pricer/features/: engineer.py
src/airbnb_pricer/models/: evaluate.py  predict.py  train.py
src/airbnb_pricer/viz/: plots.py  style.py
tests/: conftest.py  test_clean.py  test_features.py  test_model.py
