[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "airbnb-pricer"
version = "1.0.0"
description = "Price-tier intelligence for Sydney Airbnb listings: data pipeline, ML models, and an interactive pricing advisor."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aditya Moon" }]
keywords = ["airbnb", "pricing", "machine-learning", "sydney", "classification"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "requests>=2.31",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
app = ["streamlit>=1.35", "plotly>=5.20"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
airbnb-pricer = "airbnb_pricer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
